Bugfix: "Also Save as Kra" doesn't work on Android

when alsoAsKra is checked we use file picker to ask for the location to
save Kra. Picker will try to find the parent location of the current file.

BUG:424612


(cherry picked from commit a7dd47d1685b990d9be1b52865e11144cfa4f18f)